8300273: [IR framework] Handle <!-- safepoint while printing --> message instead of bailing out

Reviewed-by: thartmann, kvn